--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Moon Cafe Menu</title>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <!--adding menu content-->
     <main>
-        
+        <h1>BLUE MOON CAFE</h1>
+        <p>Est. 2023</p>
+        <!--coffees menu-->
+        <section>
+            <h2>Coffee</h2>
+        </section>
     </main>
 </body>
 </html>
