--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
+    <div>
+        <main>
+            <h1>BLUE MOON CAFE</h1>
+            <p>Est. 2023</p>
+            <!--coffees menu-->
+            <section>
+                <h2>Coffee</h2>
+            </section>
+        </main>
+    </div>
     <!--adding menu content-->
-    <main>
-        <h1>BLUE MOON CAFE</h1>
-        <p>Est. 2023</p>
-        <!--coffees menu-->
-        <section>
-            <h2>Coffee</h2>
-        </section>
-    </main>
+    
 </body>
 </html>
