--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
+    <!--adding menu content-->
+    <div class="menu">
         <main>
             <h1>BLUE MOON CAFE</h1>
             <p>Est. 2023</p>
@@ -17,7 +18,7 @@
             </section>
         </main>
     </div>
-    <!--adding menu content-->
+    
     
 </body>
 </html>
