added menu items to coffee

--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
             <!--coffees menu-->
             <section>
                 <h2>Coffee</h2>
+                <article class="item">
+                    <!--place these two paragraph elements side by side 
+                        so that they are inline with display inline block
+                        that takes the full 100% width instead of fiddling with 
+                        subtracting bits and pieces from either
+                    -->
+                    <p class="flavor">Twilight Mocha</p><p class="price">3.25</p>
+                </article>
+                <article class="item">
+                    <p class="flavor">Starry Night Frappuchino</p><p class="price">3.50</p>
+                </article>
+                <article class="item">
+                    <p class="flavor">Sweet Dreams Macchiato</p><p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="flavor">Space Void Americano</p><p class="price">3.25</p>
+                </article>
             </section>
         </main>
     </div>
