dessert section added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <p class="flavor">Space Void Americano</p><p class="price">3.25</p>
                 </article>
             </section>
+            <section>
+                <!--DESSERTS-->
+            </section>
         </main>
     </div>
     
