added dessert items

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             </section>
             <section>
                 <!--DESSERTS-->
+                <article class="item">
+                    <p class="dessert">Harvest Moon Pie</p><p class="price">3.50</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Blue Moon Muffins</p><p class="price">3.00</p>
+                </article>
+                <article class="item">
+                    <p class="dessert">Ice Rock Cone</p><p class="price">3.25</p>
+                </article>
             </section>
         </main>
     </div>
