--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 </article>
             </section>
         </main>
+        <footer>
+            <p><a target="_blank" href="https://cdn.mos.cms.futurecdn.net/iKTrBPAKhj62YDDVM4myS8-970-80.jpg.webp">Visit us</a></p>
+            <p>Serving now in the skies above</p>
+        </footer>
     </div>
     
     
