added line breaks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <main>
             <h1>BLUE MOON CAFE</h1>
             <p>Est. 2023</p>
+            <hr>
             <!--coffees menu-->
             <section>
                 <h2>Coffee</h2>
@@ -35,6 +36,7 @@
             </section>
             <section>
                 <!--DESSERTS-->
+                <h2>Desserts</h2>
                 <article class="item">
                     <p class="dessert">Harvest Moon Pie</p><p class="price">3.50</p>
                 </article>
@@ -46,6 +48,7 @@
                 </article>
             </section>
         </main>
+        <hr>
         <footer>
             <p><a target="_blank" href="https://cdn.mos.cms.futurecdn.net/iKTrBPAKhj62YDDVM4myS8-970-80.jpg.webp">Visit us</a></p>
             <p>Serving now in the skies above</p>
