added icons, styled line breaks

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <footer>
             <p><a target="_blank" href="https://cdn.mos.cms.futurecdn.net/iKTrBPAKhj62YDDVM4myS8-970-80.jpg.webp">Visit us</a></p>
             <p>Serving now in the skies above</p>
+            <p>Coffee icon by James Smith from <a href="https://thenounproject.com/browse/icons/term/coffee/" target="_blank" title="Coffee Icons">Noun Project</a> (CC BY 3.0)</p>
+            <p>Dessert icon by rahmat from <a href="https://thenounproject.com/browse/icons/term/dessert/" target="_blank" title="Dessert Icons">Noun Project</a> (CC BY 3.0)</p>
         </footer>
     </div>
     
