icons, footer, font-size

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <!--coffees menu-->
             <section>
                 <h2>Coffee</h2>
+                <img class="icon" src="./coffee_icon.png" alt="coffee icon">
                 <article class="item">
                     <!--place these two paragraph elements side by side 
                         so that they are inline with display inline block
@@ -37,6 +38,7 @@
             <section>
                 <!--DESSERTS-->
                 <h2>Desserts</h2>
+                <img alt="dessert icon" class="icon" src="./dessert_icon.png">
                 <article class="item">
                     <p class="dessert">Harvest Moon Pie</p><p class="price">3.50</p>
                 </article>
@@ -50,10 +52,15 @@
         </main>
         <hr>
         <footer>
-            <p><a target="_blank" href="https://cdn.mos.cms.futurecdn.net/iKTrBPAKhj62YDDVM4myS8-970-80.jpg.webp">Visit us</a></p>
-            <p>Serving now in the skies above</p>
-            <p>Coffee icon by James Smith from <a href="https://thenounproject.com/browse/icons/term/coffee/" target="_blank" title="Coffee Icons">Noun Project</a> (CC BY 3.0)</p>
-            <p>Dessert icon by rahmat from <a href="https://thenounproject.com/browse/icons/term/dessert/" target="_blank" title="Dessert Icons">Noun Project</a> (CC BY 3.0)</p>
+            <div class="footerone">
+                <p><a target="_blank" href="https://cdn.mos.cms.futurecdn.net/iKTrBPAKhj62YDDVM4myS8-970-80.jpg.webp">Visit us</a></p>
+                <p>Serving now in the skies above</p>
+            </div>
+            <div class="footertwo">
+                <p>Coffee icon by James Smith from <a href="https://thenounproject.com/browse/icons/term/coffee/" target="_blank" title="Coffee Icons">Noun Project</a> (CC BY 3.0)</p>
+                <p>Dessert icon by rahmat from <a href="https://thenounproject.com/browse/icons/term/dessert/" target="_blank" title="Dessert Icons">Noun Project</a> (CC BY 3.0)</p>
+            </div>
+            
         </footer>
     </div>
     
