--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blue Moon Cafe Menu</title>
     <link href="style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz@10..48&family=Comfortaa&family=Quicksand&family=Roboto+Mono&display=swap" rel="stylesheet">
+   
 </head>
 <body>
     <!--adding menu content-->
     <div class="menu">
         <main>
             <h1>BLUE MOON CAFE</h1>
-            <p>Est. 2023</p>
+            <p class="established">Est. 2023</p>
             <hr>
             <!--coffees menu-->
             <section>
