text shadow, header icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <!--adding menu content-->
     <div class="menu">
         <main>
-            <h1>BLUE MOON CAFE</h1>
+            <div class="header">
+                <img src="./moon.png" alt="moon icon">
+                <h1>BLUE MOON CAFE</h1>
+                <img src="./moon.png" alt="moon icon">
+            </div>
+            
             <p class="established">Est. 2023</p>
             <hr>
             <!--coffees menu-->
@@ -58,6 +63,7 @@
                 <p>Serving now in the skies above</p>
             </div>
             <div class="footertwo">
+                <!--iconixar (moon)-->
                 <p>Coffee icon by James Smith from <a href="https://thenounproject.com/browse/icons/term/coffee/" target="_blank" title="Coffee Icons">Noun Project</a> (CC BY 3.0)</p>
                 <p>Dessert icon by rahmat from <a href="https://thenounproject.com/browse/icons/term/dessert/" target="_blank" title="Dessert Icons">Noun Project</a> (CC BY 3.0)</p>
             </div>
